# prevodb

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac
po/: Makevars  POTFILES.in  eo.po
src/: Makefile.am  dump-all.sh  dump-article.c  dump-marks.c  main.c  pdb-db.c  pdb-doc.c  pdb-doc.h  pdb-file.c  pdb-lang.c  pdb-list.h  pdb-man.c  pdb-man.h  pdb-revo.c  pdb-revo.h  pdb-span.c  pdb-span.h  pdb-trim.c  pdb-trim.h  pdb-xml.c  prevo-completion  prevo.c  test-doc.c
